fix: card button spacing fixed

--- a/pages/bidding-portal/seller-portal/style.module.scss
+++ b/pages/bidding-portal/seller-portal/style.module.scss
@@ -225,3 +225,6 @@
 	color: $gray-cb;
 	outline: none;
 }
+.cardBtnCols{
+	padding: 15px 10px;
+}
